--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "koa-combine-routers": "^4.0.2",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
-    "mysql": "^2.18.1",
+    "mongoose": "^5.12.15",
     "next": "^10.0.4",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
